[package]
name = "tidy-tuntap"
description = "tidy-tuntap is a Rust wrapper for working with TUN/TAP devices in Linux"
version = "0.2.0"
edition = "2021"
authors = ["m.amin.rayej <m.amin.rayej@gmail.com>"]
repository = "https://github.com/maminrayej/tidy-tuntap"
license= "MIT"
categories = ["network-programming"]
keywords = ["tuntap", "tun_tap", "tun", "tap"]

[dependencies]
bitflags = "1.3.2"
futures = "0.3.23"
nix = "0.25.0"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["net"] }

[build-dependencies]
bindgen = "0.60.1"

[dev-dependencies]
etherparse = "0.12.0"
nix = "0.25.0"
tokio = { version = "1.20.1", features = ["full"] }

[features]
full = ["mq", "tokio"]
mq = []
tokio = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
